--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -20,6 +20,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57.png">
   </head>
+  {% block donate %}
+  {% endblock %}
   <body>
     <!-- Navbar Menu  ---->
     <section id="nav-bar">
